--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
 					До конца акции осталось
 				</div>
 				<div class="timer-numbers" id="timer">
+					<span class="days">7</span>
+					<span>:</span>
 					<span class="hours">18</span>
 					<span>:</span>
 					<span class="minutes">20</span>
